// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots WheelPicker Normal 1`] = `
<ul
  className="sc-bwzfXH jCGouY"
  data-testid="picker-list"
  height={200}
  width="100px"
>
  <div
    style={
      Object {
        "height": 80,
      }
    }
  />
  <li
    className="sc-bdVaJa hgkexo"
    color="#bbb"
    data-itemid="0"
    fontSize={16}
    height={40}
  >
    React
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="1"
    fontSize={16}
    height={40}
  >
    Angular
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="2"
    fontSize={16}
    height={40}
  >
    Vue
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="3"
    fontSize={16}
    height={40}
  >
    TypeScript
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="4"
    fontSize={16}
    height={40}
  >
    JavaScript
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="5"
    fontSize={16}
    height={40}
  >
    ReactNative
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="6"
    fontSize={16}
    height={40}
  >
    Flow
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="7"
    fontSize={16}
    height={40}
  >
    jQuery
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="8"
    fontSize={16}
    height={40}
  >
    Next
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="9"
    fontSize={16}
    height={40}
  >
    Nuxt
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="10"
    fontSize={16}
    height={40}
  >
    Node
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="11"
    fontSize={16}
    height={40}
  >
    Deno
  </li>
  <li
    className="sc-bdVaJa hfXjnW"
    color="#bbb"
    data-itemid="12"
    fontSize={16}
    height={40}
  >
    Nest
  </li>
  <div
    style={
      Object {
        "height": 80,
      }
    }
  />
</ul>
`;

exports[`Storyshots WheelPicker Select 1`] = `
<ul
  className="sc-bwzfXH czMigF"
  data-testid="picker-list"
  height={200}
  width="100px"
>
  <div
    style={
      Object {
        "height": 80,
      }
    }
  />
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="0"
    fontSize={16}
    height={40}
  >
    React
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="1"
    fontSize={16}
    height={40}
  >
    Angular
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="2"
    fontSize={16}
    height={40}
  >
    Vue
  </li>
  <li
    className="sc-bdVaJa cQrPhW"
    color="#999"
    data-itemid="3"
    fontSize={16}
    height={40}
  >
    TypeScript
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="4"
    fontSize={16}
    height={40}
  >
    JavaScript
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="5"
    fontSize={16}
    height={40}
  >
    ReactNative
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="6"
    fontSize={16}
    height={40}
  >
    Flow
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="7"
    fontSize={16}
    height={40}
  >
    jQuery
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="8"
    fontSize={16}
    height={40}
  >
    Next
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="9"
    fontSize={16}
    height={40}
  >
    Nuxt
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="10"
    fontSize={16}
    height={40}
  >
    Node
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="11"
    fontSize={16}
    height={40}
  >
    Deno
  </li>
  <li
    className="sc-bdVaJa fcvgZF"
    color="#999"
    data-itemid="12"
    fontSize={16}
    height={40}
  >
    Nest
  </li>
  <div
    style={
      Object {
        "height": 80,
      }
    }
  />
</ul>
`;

exports[`Storyshots WheelPickerItem Active 1`] = `
<li
  className="sc-bdVaJa cickSD"
  color="black"
  data-itemid="0"
  fontSize={16}
  height={30}
>
  0
</li>
`;

exports[`Storyshots WheelPickerItem Normal 1`] = `
<li
  className="sc-bdVaJa ivjfhv"
  color="black"
  data-itemid="0"
  fontSize={16}
  height={30}
>
  0
</li>
`;
